--- a/.github/workflows/keiba_predict.yml
+++ b/.github/workflows/keiba_predict.yml
@@ -9,7 +9,17 @@ jobs:
 
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+      DISCORD_WEBHOOK_URL_TOKYO: ${{ secrets.DISCORD_WEBHOOK_URL_TOKYO }}
+      DISCORD_WEBHOOK_URL_NAKAYAMA: ${{ secrets.DISCORD_WEBHOOK_URL_NAKAYAMA }}
+      DISCORD_WEBHOOK_URL_HANSHIN: ${{ secrets.DISCORD_WEBHOOK_URL_HANSHIN }}
+      DISCORD_WEBHOOK_URL_CHUKYO: ${{ secrets.DISCORD_WEBHOOK_URL_CHUKYO }}
+      DISCORD_WEBHOOK_URL_KYOTO: ${{ secrets.DISCORD_WEBHOOK_URL_KYOTO }}
+      DISCORD_WEBHOOK_URL_HAKODATE: ${{ secrets.DISCORD_WEBHOOK_URL_HAKODATE }}
+      DISCORD_WEBHOOK_URL_FUKUSHIMA: ${{ secrets.DISCORD_WEBHOOK_URL_FUKUSHIMA }}
+      DISCORD_WEBHOOK_URL_NIIGATA: ${{ secrets.DISCORD_WEBHOOK_URL_NIIGATA }}
+      DISCORD_WEBHOOK_URL_SAPPORO: ${{ secrets.DISCORD_WEBHOOK_URL_SAPPORO }}
+      DISCORD_WEBHOOK_URL_KOKURA: ${{ secrets.DISCORD_WEBHOOK_URL_KOKURA }}
+
 
     steps:
 
